Check if the link tag contains href attribute